[gd_scene load_steps=9 format=3 uid="uid://yhaj0m23qtd2"]

[ext_resource type="Script" path="res://src/entities/entity/entity.gd" id="1_8uhcy"]
[ext_resource type="SpriteFrames" uid="uid://bpcqw3ux8t2hk" path="res://src/entities/entity/presets/civilian/civilian_sprite_frames.tres" id="2_iprb1"]
[ext_resource type="Resource" uid="uid://qastmqpdpaui" path="res://src/entities/entity/presets/goon/goon_preset.tres" id="2_rqinc"]
[ext_resource type="Texture2D" uid="uid://bvjwcnx5134il" path="res://assets/ui/rescue_text.png" id="3_m4wkc"]
[ext_resource type="Texture2D" uid="uid://jgjhswf5f3pi" path="res://assets/ui/healthbar/health_under.png" id="5_ygxa6"]
[ext_resource type="Texture2D" uid="uid://b4pa8rvba3ac5" path="res://assets/ui/healthbar/health-over.png" id="6_xswps"]
[ext_resource type="Texture2D" uid="uid://bwp1lkqnpimga" path="res://assets/ui/healthbar/health_progress.png" id="7_iw4dg"]
[ext_resource type="Script" path="res://src/entities/entity/healthbar.gd" id="8_4s83c"]

[node name="Goon" type="Node2D"]
script = ExtResource("1_8uhcy")
preset = ExtResource("2_rqinc")

[node name="EntitySprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = ExtResource("2_iprb1")
animation = &"idle"

[node name="RescueText" type="Sprite2D" parent="EntitySprite"]
visible = false
position = Vector2(0, -32)
texture = ExtResource("3_m4wkc")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -12)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(0, 16)
polygon = PackedVector2Array(-16, -4, 0, -12, 16, -4, 0, 4)

[node name="Healthbar" type="TextureProgressBar" parent="."]
offset_left = -8.0
offset_top = -33.0
offset_right = 8.0
offset_bottom = -29.0
max_value = 5.0
value = 4.0
texture_under = ExtResource("5_ygxa6")
texture_over = ExtResource("6_xswps")
texture_progress = ExtResource("7_iw4dg")
script = ExtResource("8_4s83c")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="value_changed" from="Healthbar" to="Healthbar" method="_on_value_changed"]
